--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 
 }
 .test2 {
-    background-image: url(photo_2022-11-29_09-08-40.jpg);
+    background-image: url(https://1drv.ms/u/s!Am3Z6D-vaoh1g2EUeTYu-JZ1Kq69);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -20,7 +20,7 @@ body {
     animation-duration: 3s;
 }
 .test3 {
-    background-image: url(photo_2022-11-03_22-13-43.jpg);
+    background-image: url(https://1drv.ms/u/s!Am3Z6D-vaoh1g2LYkESIlsvO2tlQ);
     width: 200px;
     height: 200px;
     background-position: center;
