--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .image {
-    background-image: url(https://thumbs.gfycat.com/DistortedPepperyIvorybilledwoodpecker-size_restricted.gif);
+    background-image: url(https://thumbs.gfycat.com/DistortedPepperyIvorybilledwoodpecker-size_restricted.gi);
     max-width: ;
     height: 900px;
     background-repeat: no-repeat;
