--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .image {
-    background-image: url(https://thumbs.gfycat.com/DistortedPepperyIvorybilledwoodpecker-size_restricted.gi);
+    background-image: url(https://animation.99px.ru/cms/mhost.php?tid=86&act=getimage&id=30588);
     max-width: ;
     height: 900px;
     background-repeat: no-repeat;
