--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .image {
-    background-image: url(https://animation.99px.ru/cms/mhost.php?tid=86&act=getimage&id=30588);
+    background-image: url(99px_ru_animacii_30588_psihodelika_effekt_na_chernom_fone.gif);
     max-width: ;
     height: 900px;
     background-repeat: no-repeat;
