--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .image {
-    background-image: url(https://raw.githubusercontent.com/Doule-soft/Doule-soft.github.io/main/99px_ru_animacii_30588_psihodelika_effekt_na_chernom_fone.gif);
+    background-image: url(https://raw.githubusercontent.com/Doule-soft/Doule-soft.github.io/main/photo_2023-02-13_11-45-20.jpg);
     max-width: ;
     height: 900px;
     background-repeat: no-repeat;
