--- a/style.css
+++ b/style.css
@@ -1,40 +1,41 @@
-.image {
-    background-image: url(https://raw.githubusercontent.com/Doule-soft/Doule-soft.github.io/main/photo_2023-02-13_11-45-20.jpg);
-    max-width: ;
-    height: 900px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;}
-
-    .tg {
-        background-image: url(https://github.com/Doule-soft/Doule-soft.github.io/blob/main/telegram.png?raw=true)
-         
-    }
-
-    body {
-        height: 30px;
-        color: black;
-    }
-    .wee {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 30px;
-        width: 100px;
-    }
-.www {
+.t1 {
     width: 200px;
     height: 200px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     border-radius: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
-.test1 {
-    text-decoration: none;
+.t2 {
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+}
+body {
+    background-image: url(karatel.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    min-height: auto;
+    min-width: auto;
+}
+.t3 {
+    color: aliceblue;
     text-align: center;
-    color: white;
+}
+hr {
+    background-color: beige 30px inset;
+    border: 1px red inset;
+}
+.t4 {
+    width: 150px;
+    height: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
 }
