--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     text-align: center;
 }
 body {
-    background-image: url(https://i.gifer.com/1j64.gif);
+    background-image: url(https://i.gifer.com/Oh54.gif);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
